    qname="." and qtype="NS" would return with an empty additional section).
    Fixed by adding the hints explicitly; this also forces the tests to take
    place under the root served by a-m.root-servers.net
    

Fix rt.cpan.org #29877
    Made 00-version.t recognize a "GIT" environment.




Fix rt.cpan.org #29878

   SPF.pm did not evaluate as true. Thanks Bjorn Hansen.

Fix rt.cpan.org #29883
   Fix various tests only available through SVN, so they are 
   more robust (Acknowledgements Bjoern Hansen)


Fix rt.cpan.org #24343
   Resolver's nameserver() method would do silly things with undefined 
   arguments.

Fix rt.cpan.org #29531
   Nameserver.pm, Packet.pm and Question.pm modified to avoid erroneous PTR
   lookup in response to mischievous query packet containing an IP address.


Fix rt.cpan.org #27970 better netdns.o

    Marek Rouchal provided two minor improvements for linking the C
    code sniplets


Fix rt.cpan 28345

    A fix in Test::Simple revealed an off by 1 error in the testplan
    for 05-rr-rrsort.t. The fix is to remove a test, creating a dependency
    on Test::Simple 0.71 seemed overkill.



*** 0.61, 1 August 2007

Fix rt.cpan.org #28106, 28198, and 28590
    Modification of $_ in various places.  

Fix
    t/11-inet6 assumed lowercase domain names.

*** 0.60 20 June 2007

Fix spelling mistakes in change log using interactive spell checker (aspell).

Fix
    Two redundant calls of $self->rdatastr() in Net::DNS::RR::string().

Fix rt.cpan.org #27285 bis
    Unreleased 0.59_1 dn_expand_PP() has security flaw allowing access to
    arbitrary data using crafted packet with out of range compression pointer.
    Patch by Dick Franks based on 0.59 code. 

Fix rt.cpan.org #27391
    dn_compress() produces corrupt packet for name containing empty label.

Fix rt.cpan.org #26957
    dn_compress() croaks for name having label which exceeds 63 characters.
    Patch by Dick Franks truncates offending label.

Feature check_soa test of NCACHE TTL